# speek

./: LICENSE  README.md  pyproject.toml
speek/: check_slurm_resource.py
